--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: "Inter", "Roboto", system-ui, sans-serif;
+  font-family: 'Inter', 'Roboto', system-ui, sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
