fetch data from App and style components

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,10 @@
 :root {
-  font-family: 'Inter', 'Roboto', system-ui, sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+  font-family: 'Inter', 'Roboto', system-ui, sans-serif;
 }
